--- a/.github/workflows/.pre-commit.yml
+++ b/.github/workflows/.pre-commit.yml
@@ -2,13 +2,18 @@ name: pre-commit
 
 on:
   pull_request:
-  push:
-    branches: [master]
 
 jobs:
   pre-commit:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        python-version: [ "3.10" ]
+
     steps:
     - uses: actions/checkout@v3
-    - uses: actions/setup-python@v3
+    - uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python-version }}
     - uses: pre-commit/action@v3.0.0
