--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
 name: pylint
 
 on:
@@ -14,25 +11,25 @@ permissions:
 
 jobs:
   build:
-
+    name: Run Pylint
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        python-version: ["3.10"]
+        python-version: [ "3.10" ]
 
     steps:
-    - name: Checkout repository
+    - name: Checkout source repository
       uses: actions/checkout@v3
     - name: Set up python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies for testing
       run: |
         python3 -m pip install --upgrade pip
         python3 -m pip install .[test]
-    - name: pylint
+    - name: Run Pylint
       run: |
         # stop the build if there are Python syntax errors or undefined names
         pylint --reports n async_gpib
