--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -11,18 +11,18 @@ permissions:
 
 jobs:
   build:
-    name: Run Pylint
+
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        python-version: [ "3.10", "3.11" ]
+        python-version: ["3.10", "3.11", "3.12"]
 
     steps:
     - name: Checkout source repository
       uses: actions/checkout@v4
     - name: Set up python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies for testing
@@ -32,4 +32,4 @@ jobs:
     - name: Run Pylint
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        pylint --reports n async_gpib
+        pylint --reports n prologix_gpib_async
