--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -32,4 +32,4 @@ jobs:
     - name: Run Pylint
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        pylint --reports n prologix_gpib_async
+        pylint --reports n async_gpib
