Replaced underscore in  module name to account for https://github.com/pypa/setuptools/issues/2522

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "async_gpib"
+name = "async-gpib"
 authors = [
   { name="Patrick Baus", email="patrick.baus@physik.tu-darmstadt.de" },
 ]
