Added missing dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ dev = [
 ]
 
 test = [
-    "mypy", "pylint", "pytest",
+    "mypy", "pylint", "pytest", "setuptools",
 ]
 
 [tool.pylint.'MESSAGES CONTROL']
